unpackaged/main/default/objects/Tiers__c/Tiers__c.object-meta.xml
<CustomObject>
    <label>Tiers</label>
    <nameField>
        <displayFormat>TIER-{0000}</displayFormat>
        <label>N°</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>