unpackaged/main/default/objects/Tiers__c/fields/Compagnie__c.field-meta.xml
<CustomField>
    <fullName>Compagnie__c</fullName>
    <label>Compagnie</label>
    <length>100</length>
    <type>Text</type>
</CustomField>