unpackaged/main/default/objects/Tiers__c/fields/Immat__c.field-meta.xml
<CustomField>
    <fullName>Immat__c</fullName>
    <label>Immatriculation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>