unpackaged/main/default/objects/Tiers__c/fields/Reference_tiers__c.field-meta.xml
<CustomField>
    <fullName>Reference_tiers__c</fullName>
    <label>Référence tiers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>