unpackaged/main/default/objects/Tiers__c/fields/Responsabilitie__c.field-meta.xml
<CustomField>
    <fullName>Responsabilitie__c</fullName>
    <label>% Responsabilité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>