unpackaged/main/default/objects/Tiers__c/fields/Sinistre__c.field-meta.xml
<CustomField>
    <fullName>Sinistre__c</fullName>
    <label>N° Sinistre</label>
    <referenceTo>Sinistre__c</referenceTo>
    <relationshipLabel>Tiers</relationshipLabel>
    <relationshipName>Tiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>