unpackaged/main/default/objects/Tiers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Immat__c</columns>
    <columns>Parc__c</columns>
    <columns>Sinistre__c</columns>
    <columns>Responsabilitie__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>